--- a/reception/build.gradle
+++ b/reception/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '2.1.20'
+    id("org.springframework.boot") version "3.1.4"
+    id("io.spring.dependency-management") version "1.1.0"
 }
 
 group = 'itmo.deniill'
@@ -11,6 +13,11 @@ repositories {
 
 dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("com.h2database:h2")
+    implementation("org.jetbrains.kotlin:kotlin-reflect")
 }
 
 test {
